# monero-mj

./: CMakeLists.txt  Makefile
.github/workflows/: build-time-test.yml  build.yml  depends.yml
cmake/: FindCcache.cmake
contrib/epee/include/: console_handler.h  file_compression.h  include_base_utils.h  misc_log_ex_common.h  misc_log_ex_defaults.h  misc_log_ex_max.h  (+2 more)
src/: CMakeLists.txt
src/blockchain_db/: testdb.h
src/blockchain_utilities/: blockchain_ancestry.cpp  blockchain_blackball.cpp  blockchain_depth.cpp  blockchain_export.cpp  blockchain_import.cpp  blockchain_prune.cpp  blockchain_prune_known_spent_data.cpp  blockchain_stats.cpp  blockchain_usage.cpp
src/checkpoints/: checkpoints.cpp
src/common/: CMakeLists.txt  boost_serialization_helper.h  difficulty_type.cpp  difficulty_type.h  forwardable_wrapper.h
src/cryptonote_basic/: cryptonote_boost_serialization.h  difficulty.cpp  difficulty.h  i_miner.h  miner.cpp  miner.h
src/cryptonote_core/: CMakeLists.txt  blockchain.cpp  blockchain.h  cryptonote_core.cpp  cryptonote_core.h  cryptonote_core_abstract.cpp  cryptonote_core_abstract.h  cryptonote_core_command_line.h
src/cryptonote_protocol/: cryptonote_protocol_defs.h  cryptonote_protocol_handler-base.cpp  cryptonote_protocol_handler.inl
src/daemon/: command_line_args.h  command_parser_executor.cpp  core.h  daemon.cpp  main.cpp  p2p.h  protocol.h  rpc_command_executor.cpp
src/daemonizer/: windows_daemonizer.inl  windows_service_runner.h
src/device/: device_default.cpp  device_ledger.cpp
src/device_trezor/: device_trezor.cpp  device_trezor_base.cpp
src/fingerprint_fee/: CMakeLists.txt  fingerprint_fee.cpp
src/p2p/: net_node.cpp
src/rpc/: bootstrap_daemon.cpp  core_rpc_server.cpp  core_rpc_server.h  core_rpc_server_commands_defs.h  daemon_handler.cpp  daemon_handler.h  message_data_structs.h  rpc_handler.cpp  rpc_handler.h
src/serialization/: difficulty_type.h
src/wallet/: wallet2.cpp  wallet2.h  wallet_rpc_helpers.h
tests/: hash-target.cpp
tests/block_weight/: block_weight.cpp
tests/core_proxy/: core_proxy.cpp
tests/core_tests/: CMakeLists.txt  block_reward.cpp  block_reward.h  block_validation.cpp  block_validation.h  bulletproofs.h  chain_split_1.cpp  chain_split_1.h  chain_switch_1.cpp  chain_switch_1.h  chaingen.cpp  chaingen.h  chaingen001.cpp  chaingen_main.cpp  chaingen_tests_list.h  double_spend.cpp  double_spend.h  double_spend.inl  integer_overflow.cpp  integer_overflow.h  multisig.h  rct.h  rct2.h  ring_signature_1.cpp  ring_signature_1.h  tx_pool.cpp  tx_pool.h  tx_validation.h  v2_tests.h
tests/difficulty/: difficulty.cpp
tests/fuzz/: fuzzer.h
tests/performance_tests/: check_hash.h
tests/unit_tests/: CMakeLists.txt  blockchain_db.cpp  bulletproofs_plus.cpp  decoy.cpp  decoy_wrappers.cpp  decoy_wrappers.h  difficulty.cpp  epee_file_compression.cpp  levin.cpp  logging.cpp  long_term_block_weight.cpp  node_server.cpp  output_distribution.cpp  pch_ut.h  serialization.cpp  subaddress.cpp  tx_proof.cpp
(+17 files in other folders)
